--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h2 class="skills__title">PLANETS</h2>
             <ul class="planets__list skills-list">
                 <li class="skills-list__skill skill">
-                    <img class="skill__img"src="g_581-removebg-preview.png" alt="Gliese 581 g" width="150" height="150">
+                    <img class="skill__img"src="g_581-removebg-preview (1).png" alt="Gliese 581 g" width="150" height="150">
                     <span class="skill__info">Gliese 581 g</span>
                     <a href="gliese581g.html">Click Here</a>
                 </li>
