--- a/gliese581g.html
+++ b/gliese581g.html
@@ -1,6 +1,6 @@
 <section class="home">
   <h1 class="home__title">GLİESE 581 G</h1>
-  <img class="home_img" src="g_581-removebg-preview.png" alt="GLİESE 581 G" width="250" height="250">
+  <img class="home_img" src="g_581-removebg-preview (1).png" alt="GLİESE 581 G" width="250" height="250">
   <title>Gliese581g</title>
   
   <!-- Flex container for the boxes -->
