--- a/titan.html
+++ b/titan.html
@@ -21,52 +21,52 @@
     <div class="info-boxes">
         <!-- First row of boxes -->
         <div class="boxed-text">
-            <p>Gezegen Yarıçapı: 2.574,7</p>
+            <p>Planet Radius: 2.574,7 km</p>
         </div>
         <div class="boxed-text">
-            <p>Gezegen Türü: Uydu</p>
+            <p>Planet Type: satellite</p>
         </div>
         <div class="boxed-text">
-            <p>Keşif Yöntemi: Teleskop Gözlemi</p>
+            <p>Exploration Method: Telescope Observation</p>
         </div>
         <div class="boxed-text">
-            <p>Gezegen Kütlesi: 0,0225 Dünya</p>
+            <p>Planetary Mass: 0,0225 Earth</p>
         </div>
         
         <!-- Second row of boxes -->
         <div class="boxed-text">
-            <p>Keşif Tarihi: 1655</p>
+            <p>Discovery Date: 1655</p>
         </div>
         <div class="boxed-text">
-            <p>Yıldızının Türü: Sarı Cüce</p>
+            <p>Type of Star: Yellow Dwarf</p>
         </div>
         <div class="boxed-text">
-            <p>Yörünge Periyodu: 10.759 Gün</p>
+            <p>Orbital Period: 10.759 Days</p>
         </div>
         <div class="boxed-text">
-            <p>Gözlendiği Yer: (Bilinmiyor)</p>
+            <p>Place of Observation: (unknown)</p>
         </div>
     </div>
   </section>
   
           <!-- Hakkımda bölümü -->
           <section class="main__HAKKINDA HAKKINDA" id="HAKKINDA">
-            <h2 class="about__title">HAKKINDA</h2>
+            <h2 class="about__title">ABOUT</h2>
             <P>
-              29 Eylül 2010'da Keck Gözlemevi'ni kullanan gökbilimciler, HARPS ve HIRES araçlarından gelen veri kümelerinin bir kombinasyonunun analizine dayanarak neredeyse dairesel yörüngelerde bulunan Gliese 581g adlı gezegeni keşfettiler .
+             Titan was discovered by Dutch astronomer Christiaan Huygens on March 25, 1655. Before him, in 1610, Galileo Galilei had discovered the four largest moons of Jupiter, known as the Galilei moons, and made improvements for telescopes. Inspired by Galileo, Huygens and his brother Constantijn Huygens Jr. developed their own telescopes and with one of these telescopes they discovered Titan. This was the sixth satellite discovered after Earth's moon, the Moon, and Jupiter's Galilei moons.
             </P>
             <P>
-              Gliese 581g, Gliese 581 yıldız sisteminde bulunan bir exoplanettir. Gliese 581, M tipi bir kırmızı cüce yıldızdır. Bu tür yıldızlar, genellikle düşük sıcaklıkları ve parlaklıkları ile bilinirler. Gliese 581g, yıldızın yaşanabilir bölgesinde yer aldığı için dikkat çekmiştir.
+              Like our Earth, it is in the Solar System and is a moon of Saturn, the second largest planet in the system.
             </P>
             <P>
-              Gliese 581g'nin yarıçapı tam olarak belirlenememekle birlikte, kütlesinin Dünya'nın kütlesinin yaklaşık 3 ila 4 katı olduğu düşünülüyor. Bu, gezegenin yarıçapının da Dünya'nın yarıçapından daha büyük olabileceği anlamına gelir. Ancak kesin bir rakam vermek zordur, çünkü bu tür hesaplamalar genellikle dolaylı verilere dayanır. Genel tahminler, yarıçapının Dünya'nınki ile kıyaslandığında 1.1 ila 1.5 katı arasında olabileceğini öne sürüyor.
+              Titan's radius has not been precisely determined, but its mass is 0.0225 times that of Earth. This gives the planet a radius of 2,574.7 kilometers.
             </P>
   
           </section>
           &#160;
           <section class="main__HAKKINDA HAKKINDA" id="HAKKINDA">
-            <h2 class="about__title">KAYNAKLAR</h2>
-            <a href="kaynaklar.html">KAYNAKLAR İÇİN TIKLAYINIZ</a>
+            <h2 class="about__title">SOURCES</h2>
+            <a href="kaynaklar.html">CLICK FOR SOURCES</a>
           
 
 
