--- a/gj667cc.html
+++ b/gj667cc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Space Conquerors </title>
+    <title> GJ 667 C c  </title>
 </head>
 <body>
    <h1><--</h1>
@@ -20,37 +20,37 @@
     <div class="info-boxes">
         <!-- First row of boxes -->
         <div class="boxed-text">
-            <p>Gezegen Yarıçapı: 9.811,3</p>
+            <p>Planet Radius: 9.811,3 km</p>
         </div>
         <div class="boxed-text">
-            <p>Gezegen Türü: Süper Dünya</p>
+            <p>Planet Type: Super Earth</p>
         </div>
         <div class="boxed-text">
-            <p>Keşif Yöntemi: Radial Hız</p>
+            <p>Exploration Method: Radial Velocity</p>
         </div>
         <div class="boxed-text">
-            <p>Gezegen Kütlesi: 3.8 Dünya</p>
+            <p>Planetary Mass: 3.8 Earth</p>
         </div>
         
         <!-- Second row of boxes -->
         <div class="boxed-text">
-            <p>Keşif Tarihi: 2013</p>
+            <p>Discovery Date: 2013</p>
         </div>
         <div class="boxed-text">
-            <p>Yıldızının Türü: Soluk Yıldız</p>
+            <p>Type of Star: Pale Star</p>
         </div>
         <div class="boxed-text">
-            <p>Yörünge Periyodu: 28.1 Gün</p>
+            <p>Orbital Period: 28.1 Days</p>
         </div>
         <div class="boxed-text">
-            <p>Gözlendiği Yer: Avrupa Güney Gözlemevi</p>
+            <p>Place of Observation:  European Southern Observatory</p>
         </div>
     </div>
   </section>
   
           <!-- Hakkımda bölümü -->
           <section class="main__HAKKINDA HAKKINDA" id="HAKKINDA">
-            <h2 class="about__title">HAKKINDA</h2>
+            <h2 class="about__title">ABOUT</h2>
             <P>
               29 Eylül 2010'da Keck Gözlemevi'ni kullanan gökbilimciler, HARPS ve HIRES araçlarından gelen veri kümelerinin bir kombinasyonunun analizine dayanarak neredeyse dairesel yörüngelerde bulunan Gliese 581g adlı gezegeni keşfettiler .
             </P>
@@ -64,8 +64,8 @@
           </section>
           &#160;
           <section class="main__HAKKINDA HAKKINDA" id="HAKKINDA">
-            <h2 class="about__title">KAYNAKLAR</h2>
-            <a href="kaynaklar.html">KAYNAKLAR İÇİN TIKLAYINIZ</a>
+            <h2 class="about__title">SOURCES</h2>
+            <a href="kaynaklar.html">CLICK FOR SOURCES</a>
           
 
    <style>
