--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </section>
 
         <h4>*Planetary images are representative.</h4>
-        <a href="kaynaklar.html">Sources</a>
+        <a href="kaynaklar.html">SOURCES</a>
     </main>
 
     <!-- Sosyal medya bağlantıları için bir alt bilgi -->
