--- a/gliese581g.html
+++ b/gliese581g.html
@@ -13,7 +13,7 @@
           <p>Planet Type: Super Earth</p>
       </div>
       <div class="boxed-text">
-          <p>>Planet Type: Super Earth</p>
+          <p>Exploration Method: Radial Velocity</p>
       </div>
       <div class="boxed-text">
           <p>Planetary Mass 3.1 Earth</p>
