--- a/kaynaklar.html
+++ b/kaynaklar.html
@@ -13,6 +13,9 @@
     </header>
     <section class="home">
         <h1 class="home__title">KAYNAKLAR</h1>
+
+         <section class="main__planets planets" id="planets">
+            <h2 class="skills__title">PLANETS</h2>
     </section>
 
 
