--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    
    <header>
-    <h1>Space Conquerors</h1>
+    <h1>SPACE CONQUERORS</h1>
    </header>
     <main class="main">
         <section class >
