--- a/kaynaklar.html
+++ b/kaynaklar.html
@@ -13,12 +13,10 @@
     </header>
     <section class="home">
         <h1 class="home__title">KAYNAKLAR</h1>
-
-         <section class="main__planets planets" id="planets">
-            <h2 class="skills__title">PLANETS</h2>
     </section>
-
-
+  <section class="main__planets planets" id="planets">
+            <h2 class="skills__title">PLANETS</h2>
+  </section>
 
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap");
