--- a/kaynaklar.html
+++ b/kaynaklar.html
@@ -12,7 +12,7 @@
     <h1>Space Conquerors</h1>
     </header>
     <section class="home">
-        <h1 class="home__title">SOURCES</h1>
+        <h1 class="skills__title">SOURCES</h1>
         <h2 class="skills__title">NASA</h2>
     </section>
 
