--- a/kaynaklar.html
+++ b/kaynaklar.html
@@ -14,6 +14,15 @@
     <section class="home">
         <h1 class="skills__title">SOURCES</h1>
         <h2 class="skills__title">NASA</h2>
+        <a href="https://spacemath.gsfc.nasa.gov/astrob/7Page40.pdf">Gliese 581 g survey</a>
+        <a href="https://science.nasa.gov/exoplanet-catalog/gj-273-b/">Luyten b survey</a>
+        <a herf="https://science.nasa.gov/exoplanet-catalog/gj-667-c-c/">GJ 667 Cc survey</a>
+        <a href="https://science.nasa.gov/saturn/moons/titan/">Titan survey</a>
+        <h2 class="skills_title">DEEPL</h2>
+        <a href="https://www.deepl.com/tr/translator">Deepl</a>
+        <h2 class="skills_title"></h2>
+        <a href="https://chatgpt.com/">Chatgpt</a>
+        
     </section>
 
 
