--- a/gj667cc.html
+++ b/gj667cc.html
@@ -53,7 +53,7 @@
           <section class="main__HAKKINDA HAKKINDA" id="HAKKINDA">
             <h2 class="about__title">ABOUT</h2>
             <P>
-              29 Eylül 2010'da Keck Gözlemevi'ni kullanan gökbilimciler, HARPS ve HIRES araçlarından gelen veri kümelerinin bir kombinasyonunun analizine dayanarak neredeyse dairesel yörüngelerde bulunan Gliese 581g adlı gezegeni keşfettiler .
+             GJ 667Cc was discovered on November 21, 2011 by astronomers using the European Southern Observatory using the Radial Velocity method.
             </P>
             <P>
               Gliese 581g, Gliese 581 yıldız sisteminde bulunan bir exoplanettir. Gliese 581, M tipi bir kırmızı cüce yıldızdır. Bu tür yıldızlar, genellikle düşük sıcaklıkları ve parlaklıkları ile bilinirler. Gliese 581g, yıldızın yaşanabilir bölgesinde yer aldığı için dikkat çekmiştir.
