--- a/luytenb.html
+++ b/luytenb.html
@@ -2,6 +2,9 @@
     <h1 class="home__title">LUYTEN B</h1>
     <img class="home_img" src="LUYTEN_B-removebg-preview.png" alt="Luyten B" width="250" height="250">
     <title>Luyten B</title>
+     <header>
+    <h1>SPACE CONQUERORS</h1>
+   </header>
     
     <!-- Flex container for the boxes -->
     <div class="info-boxes">
