--- a/kaynaklar.html
+++ b/kaynaklar.html
@@ -9,7 +9,7 @@
 <body>
    
    <header>
-    <h1>Space Conquerors</h1>
+    <h1>SPACE CONQUERORS</h1>
     </header>
     <section class="home">
         <h1 class="skills__title">SOURCES</h1>
