--- a/luytenb.html
+++ b/luytenb.html
@@ -100,7 +100,7 @@
   scroll-behavior: smooth;
   }
   header {
-  background-color: darkgreen;
+  background-color: black;
   color: #ffffff;
   padding: 40px;
   text-align: center;
