--- a/gliese581g.html
+++ b/gliese581g.html
@@ -105,7 +105,7 @@ html {
 scroll-behavior: smooth;
 }
 header {
-background-color: darkgreen;
+background-color: black;
 color: #ffffff;
 padding: 40px;
 text-align: center;
