--- a/gj667cc.html
+++ b/gj667cc.html
@@ -56,10 +56,10 @@
              GJ 667Cc was discovered on November 21, 2011 by astronomers using the European Southern Observatory using the Radial Velocity method.
             </P>
             <P>
-              Gliese 581g, Gliese 581 yıldız sisteminde bulunan bir exoplanettir. Gliese 581, M tipi bir kırmızı cüce yıldızdır. Bu tür yıldızlar, genellikle düşük sıcaklıkları ve parlaklıkları ile bilinirler. Gliese 581g, yıldızın yaşanabilir bölgesinde yer aldığı için dikkat çekmiştir.
+              GJ 667 C is a red dwarf star, the smallest member of a three-star system. It is smaller and cooler than the Sun, with one-third the mass of the Sun. Because it emits less brightness, its planets are positioned closer to its star to stay in the habitable zone. GJ 667 Cc is an exoplanet in the habitable zone of this star and has the potential to have liquid water on its surface.
             </P>
             <P>
-              Gliese 581g'nin yarıçapı tam olarak belirlenememekle birlikte, kütlesinin Dünya'nın kütlesinin yaklaşık 3 ila 4 katı olduğu düşünülüyor. Bu, gezegenin yarıçapının da Dünya'nın yarıçapından daha büyük olabileceği anlamına gelir. Ancak kesin bir rakam vermek zordur, çünkü bu tür hesaplamalar genellikle dolaylı verilere dayanır. Genel tahminler, yarıçapının Dünya'nınki ile kıyaslandığında 1.1 ila 1.5 katı arasında olabileceğini öne sürüyor.
+              GJ 667 Cc is a “Super-Earth” exoplanet with a mass about 4.5 times that of Earth. Although its radius is unknown, it is estimated to be slightly larger than Earth due to its mass. Although it is located close to its star, it has the potential to harbor liquid water on its surface because it is in the habitable zone.
             </P>
   
           </section>
