--- a/titan.html
+++ b/titan.html
@@ -48,6 +48,10 @@
         </div>
     </div>
   </section>
+    <section>
+        <h3> Why Titan</h3>
+        <p>The fact that it contains liquid and that it is in the solar system.</p>
+    </section>
   
           <!-- Hakkımda bölümü -->
           <section class="main__HAKKINDA HAKKINDA" id="HAKKINDA">
