--- a/gj667cc.html
+++ b/gj667cc.html
@@ -48,6 +48,10 @@
         </div>
     </div>
   </section>
+    <section>
+        <h3>Why GJ 667Cc</h3>
+        <p>Glise667Cc is one of the ten most Earth-like habitable exoplanets</p>
+    </section>
   
           <!-- Hakkımda bölümü -->
           <section class="main__HAKKINDA HAKKINDA" id="HAKKINDA">
@@ -61,6 +65,7 @@
             <P>
               GJ 667 Cc is a “Super-Earth” exoplanet with a mass about 4.5 times that of Earth. Although its radius is unknown, it is estimated to be slightly larger than Earth due to its mass. Although it is located close to its star, it has the potential to harbor liquid water on its surface because it is in the habitable zone.
             </P>
+              
   
           </section>
           &#160;
