--- a/gj667cc.html
+++ b/gj667cc.html
@@ -50,7 +50,8 @@
   </section>
     <section>
         <h3>Why GJ 667Cc</h3>
-        <p>Glise667Cc is one of the ten most Earth-like habitable exoplanets</p>
+        <p>GJ 667Cc is one of the ten most Earth-like habitable exoplanets</p>
+        <p>GJ 667Cc is one of the ten most Earth-like habitable exoplanets, and 71% covered by oceans, making it on the list of potentially habitable exoplanets.</p>
     </section>
   
           <!-- Hakkımda bölümü -->
