--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <!-- Hizmetlerimiz bölümü -->
         <section class="main__planets planets" id="planets">
-            <h2 class="skills__title">PLANETS</h2>
+            <h2 class="skills__title">CELESTIAL OBJECTS</h2>
             <ul class="planets__list skills-list">
                 <li class="skills-list__skill skill">
                     <img class="skill__img"src="g_581-removebg-preview (1).png" alt="Gliese 581 g" width="150" height="150">
